--- a/ar红包.html
+++ b/ar红包.html
@@ -1,81 +1,89 @@
-
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title>支付宝AR红包</title>
-    <style type="text/css">html,body{width: 100%;height: 100%;overflow: hidden;}</style>
+    <style type="text/css">
+        html,body{width: 100%;height: 100%;overflow: hidden;}
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        .g-body{
+            margin: 20px auto;
+            width: 80%;
+        }
+        .m-shuoming{
+            float: left;
+            margin-left: 200px;
+        }
+        .m-shuoming img{
+            width: 250px;
+            margin-right: 20px;
+        }
+        .m-shangchuan{
+            float: left;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<div style="position: absolute;z-index: 10;">
-    <input type="file" id="getfileinput">
-    <div>用↑↓调整图片。</div>
+<div class="g-body">
+    <div class="m-shangchuan">
+        <div style="position: absolute;z-index: 10;">
+            <p style="margin-bottom: 5px">上传图片：<input type="file" id="getfileinput"></p>
+            <p>用↑↓调整图片。</p>
+        </div>
+        <div id="checkimg" style="position: relative;top:50px;height: 900px;width:450px;overflow: hidden;background-size: contain;background-repeat:no-repeat;background-position: 0 -200px;">
+            <img style="position: absolute;left:0;top:-200px;mix-blend-mode: screen;" src="" width="450">
+        </div>
+    </div>
+    <div class="m-shuoming">
+        <p>说明：需要上传的图片为全屏截图</p>
+        <p>截屏时将手机亮度调到最亮更容易扫</p>
+        <br>
+        <p><img src="1.jpg" alt="111"><img src="2.jpg" alt="111"><img src="3.jpg" alt="111"></p>
+    </div>
 
-</div>
-<div id="checkimg" style="position: relative;top:50px;height: 900px;width:450px;overflow: hidden;background-size: contain;background-repeat:no-repeat;background-position: 0 -200px;">
-    <img style="position: absolute;left:0;top:-200px;mix-blend-mode: screen;" src="" width="450">
 </div>
 <script type="text/javascript">
     var obj = document.querySelector('#checkimg'),
         oimg = obj.querySelector('img'),
         bgposy = -200;
     // 加载图片
-    document.querySelector('#getfileinput').addEventListener('change',function(){
+    document.querySelector('#getfileinput').addEventListener('change', function () {
         // console.log('change');
-        var that = this,filereader;
-        if(that.files.length>0){
+        var that = this, filereader;
+        if (that.files.length > 0) {
             filereader = new FileReader();
-            filereader.onload = function(e){
-                oimg.src=this.result;
-                obj.style.backgroundImage='url('+this.result+')';
-                oimg.style.top = (bgposy+3)+"px";
+            filereader.onload = function (e) {
+                oimg.src = this.result;
+                obj.style.backgroundImage = 'url(' + this.result + ')';
+                oimg.style.top = (bgposy + 3) + "px";
             };
             filereader.readAsDataURL(that.files[0]);
 
         }
-    },false);
+    }, false);
 
     // 调整
-    document.addEventListener('keydown',function(e){
+    document.addEventListener('keydown', function (e) {
         e.stopPropagation();
-        switch(e.keyCode){
+        switch (e.keyCode) {
             case 38: //上
                 ++bgposy;
                 break;
             case 40: //下
-                bgposy = bgposy =0?0:--bgposy;
+                bgposy = bgposy = 0 ? 0 : --bgposy;
                 break;
         }
         console.log(bgposy);
-        oimg.style.top = bgposy+"px";
-    },false);
+        oimg.style.top = bgposy + "px";
+    }, false);
 
 </script>
 
-<script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?cde1e6ed49ded21fcbb5f307ce9d7e00";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
-</script>
-
-<script type='text/javascript'>
-    var _vds = _vds || [];
-    window._vds = _vds;
-    (function(){
-        _vds.push(['setAccountId', 'afa1dadaf0fa4c88']);
-        (function() {
-            var vds = document.createElement('script');
-            vds.type='text/javascript';
-            vds.async = true;
-            vds.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'dn-growing.qbox.me/vds.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(vds, s);
-        })();
-    })();
-</script>
 
 </body>
 </html>
